--- a/principal.ui
+++ b/principal.ui
@@ -6,12 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>642</width>
-    <height>480</height>
+    <width>766</width>
+    <height>512</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Tienda</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="Recursos.qrc">
+    <normaloff>:/imagenes/Recursos/tienda.png</normaloff>:/imagenes/Recursos/tienda.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -25,8 +29,8 @@
       </property>
       <property name="maximumSize">
        <size>
-        <width>300</width>
-        <height>420</height>
+        <width>400</width>
+        <height>16777215</height>
        </size>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -34,8 +38,8 @@
         <widget class="QGroupBox" name="groupBox">
          <property name="maximumSize">
           <size>
-           <width>300</width>
-           <height>200</height>
+           <width>16777215</width>
+           <height>250</height>
           </size>
          </property>
          <property name="title">
@@ -65,7 +69,7 @@
           <item row="2" column="0">
            <widget class="QLabel" name="label_6">
             <property name="text">
-             <string>Teléfono</string>
+             <string>Teléfono:</string>
             </property>
            </widget>
           </item>
@@ -80,7 +84,7 @@
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QLineEdit" name="inCorreo"/>
+           <widget class="QLineEdit" name="inEmail"/>
           </item>
           <item row="4" column="0">
            <widget class="QLabel" name="label_8">
@@ -91,10 +95,10 @@
           </item>
           <item row="4" column="1">
            <widget class="QTextEdit" name="inDireccion">
-            <property name="maximumSize">
+            <property name="minimumSize">
              <size>
-              <width>16777215</width>
-              <height>100</height>
+              <width>60</width>
+              <height>0</height>
              </size>
             </property>
            </widget>
@@ -106,12 +110,12 @@
         <widget class="QGroupBox" name="groupBox_2">
          <property name="maximumSize">
           <size>
-           <width>300</width>
-           <height>200</height>
+           <width>16777215</width>
+           <height>180</height>
           </size>
          </property>
          <property name="title">
-          <string>Producto</string>
+          <string>Productos</string>
          </property>
          <layout class="QFormLayout" name="formLayout_3">
           <item row="0" column="0">
@@ -144,10 +148,7 @@
           <item row="2" column="1">
            <widget class="QLabel" name="outPrecio">
             <property name="text">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;0.0&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+             <string>0.0</string>
             </property>
            </widget>
           </item>
@@ -160,7 +161,7 @@
              </size>
             </property>
             <property name="styleSheet">
-             <string notr="true">background-color: rgb(85, 170, 127);</string>
+             <string notr="true">background-color: rgb(46, 194, 126);</string>
             </property>
             <property name="text">
              <string>Agregar</string>
@@ -170,6 +171,19 @@
          </layout>
         </widget>
        </item>
+       <item>
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
       </layout>
      </widget>
     </item>
@@ -178,18 +192,19 @@
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QGroupBox" name="groupBox_3">
-         <property name="minimumSize">
-          <size>
-           <width>300</width>
-           <height>300</height>
-          </size>
-         </property>
          <property name="title">
-          <string>Detalle de la Compra</string>
+          <string>Detalle de la compra</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
-           <widget class="QTableWidget" name="outDetalle"/>
+           <widget class="QTableWidget" name="outDetalle">
+            <property name="minimumSize">
+             <size>
+              <width>400</width>
+              <height>0</height>
+             </size>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -204,14 +219,14 @@
             </property>
             <property name="sizeHint" stdset="0">
              <size>
-              <width>40</width>
+              <width>7</width>
               <height>20</height>
              </size>
             </property>
            </spacer>
           </item>
           <item>
-           <widget class="QWidget" name="widget_5" native="true">
+           <widget class="QWidget" name="widget_4" native="true">
             <layout class="QFormLayout" name="formLayout">
              <item row="0" column="0">
               <widget class="QLabel" name="label">
@@ -228,6 +243,9 @@
                  <height>0</height>
                 </size>
                </property>
+               <property name="layoutDirection">
+                <enum>Qt::LeftToRight</enum>
+               </property>
                <property name="text">
                 <string>0.0</string>
                </property>
@@ -239,7 +257,7 @@
              <item row="1" column="0">
               <widget class="QLabel" name="label_2">
                <property name="text">
-                <string>IVA (12%)</string>
+                <string>IVA (12%):</string>
                </property>
               </widget>
              </item>
@@ -251,6 +269,9 @@
                  <height>0</height>
                 </size>
                </property>
+               <property name="layoutDirection">
+                <enum>Qt::LeftToRight</enum>
+               </property>
                <property name="text">
                 <string>0.0</string>
                </property>
@@ -261,8 +282,15 @@
              </item>
              <item row="2" column="0">
               <widget class="QLabel" name="label_3">
+               <property name="font">
+                <font>
+                 <pointsize>14</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
                <property name="text">
-                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; font-weight:600;&quot;&gt;TOTAL:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                <string>TOTAL:</string>
                </property>
               </widget>
              </item>
@@ -274,9 +302,19 @@
                  <height>0</height>
                 </size>
                </property>
+               <property name="font">
+                <font>
+                 <pointsize>14</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="layoutDirection">
+                <enum>Qt::LeftToRight</enum>
+               </property>
                <property name="styleSheet">
-                <string notr="true">background-color: rgb(255, 255, 0);
-color: rgb(255, 0, 0);</string>
+                <string notr="true">background-color: rgb(249, 240, 107);
+color: rgb(224, 27, 36);</string>
                </property>
                <property name="text">
                 <string>0.0</string>
@@ -292,6 +330,55 @@ color: rgb(255, 0, 0);</string>
          </layout>
         </widget>
        </item>
+       <item>
+        <widget class="QWidget" name="widget_5" native="true">
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QLabel" name="outAdvertencia">
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
+            <property name="text">
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QPushButton" name="cmdCompra">
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>20</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(255, 0, 0);</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="Recursos.qrc">
+              <normaloff>:/imagenes/Recursos/carrito-de-compras.png</normaloff>:/imagenes/Recursos/carrito-de-compras.png</iconset>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
@@ -302,13 +389,15 @@ color: rgb(255, 0, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>642</width>
+     <width>766</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="Recursos.qrc"/>
+ </resources>
  <connections/>
 </ui>
